# stockbeta

./: CHANGELOG.md  LICENSE  LICENSE.txt  README.md  notes.md  pyproject.toml
.github/workflows/: release.yml  release_dev.yml  test.yml
references/: generate.sh  hatch.xml  uv.xml
src/stockbeta/: __about__.py  __init__.py  cli.py  core.py  easter_egg.py  factors.py
src/stockbeta/data/: easter_egg.csv  ff3factors.csv  ff3factors.parquet
tests/: __init__.py  test_easter_egg.py  test_factors.py
