[project]
name = "stockbeta"
dynamic = ["version"]
description = 'Example Python package for teaching/learning'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["Example", "Teaching", "Finance"]
authors = [
  { name = "Jeremiah Bejarano", email = "jbejarano@uchicago.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas-datareader>=0.10.0",
  "pandas>=1.0.0",
  "numpy",
  "yfinance",
  "click",
]

[project.scripts]
stockbeta = "stockbeta.cli:main"

[project.urls]
Documentation = "https://github.com/finm-32900/stockbeta-example#readme"
Issues = "https://github.com/finm-32900/stockbeta-example/issues"
Source = "https://github.com/finm-32900/stockbeta-example"

[tool.hatch.version]
path = "src/stockbeta/__about__.py"

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "pandas-stubs",
  "types-setuptools",
  "types-openpyxl",
  "types-python-dateutil"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ tests/}"

[tool.coverage.run]
source_pkgs = ["stockbeta", "tests"]
branch = true
parallel = true
omit = [
  "src/stockbeta/__about__.py",
]

[tool.coverage.paths]
stockbeta = ["src/stockbeta", "*/stockbeta/src/stockbeta"]
tests = ["tests", "*/stockbeta/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/stockbeta"]
include = [
    "src/stockbeta/data/**"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pandas_datareader.*:",
    "ignore::FutureWarning"
]

[tool.mypy]
# Tell mypy to ignore errors about missing type hints in external packages.
# This is specifically to handle the lack of type stubs in the 'pandas_datareader' and 'yfinance' packages.
ignore_missing_imports = true

[tool.hatch.envs.test]
dependencies = [
  "pytest>=7.0",
  "pytest-cov",
  "setuptools",
  "wheel",
  "pandas",
  "pandas-datareader",
  "numpy",
  "importlib_resources>=5.0.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
